@@ -13,6 +13,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -38,26 +39,36 @@ public class SecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
         httpSecurity
                 .csrf(AbstractHttpConfigurer::disable)
-                .cors(AbstractHttpConfigurer::disable);
+                // HABILITAMOS CORS en lugar de deshabilitarlo
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()));
 
         httpSecurity.authorizeHttpRequests(
                 authorizeHttpRequests -> authorizeHttpRequests
-                        .requestMatchers("/auth/login","/auth/register","/role/**","/role",
-                                         "/member/**","/member","/area","/area/**",
-                                         "/areaxmember","/areaxmember/**",
-                                         "/news", "/news/**",
-                                         "/project", "/project/**",
-                                         "/projectxmember", "/projectxmember/**",
-                                         "/projectxarea", "/projectxarea/**",
-                                         "/registration")
-                        .permitAll()
-                        .requestMatchers(SWAGGER_WHITELIST)
-                        .permitAll()
-                        .anyRequest()
-                        .authenticated()
-
+                        // Agregamos endpoints para debugging
+                        .requestMatchers("/", "/health", "/api/status").permitAll()
+                        // Endpoints de autenticación
+                        .requestMatchers("/auth/login", "/auth/register").permitAll()
+                        // Tus endpoints existentes
+                        .requestMatchers("/role/**", "/role").permitAll()
+                        .requestMatchers("/member/**", "/member").permitAll()
+                        .requestMatchers("/area", "/area/**").permitAll()
+                        .requestMatchers("/areaxmember", "/areaxmember/**").permitAll()
+                        .requestMatchers("/news", "/news/**").permitAll()
+                        .requestMatchers("/project", "/project/**").permitAll()
+                        .requestMatchers("/projectxmember", "/projectxmember/**").permitAll()
+                        .requestMatchers("/projectxarea", "/projectxarea/**").permitAll()
+                        .requestMatchers("/registration").permitAll()
+                        // Swagger
+                        .requestMatchers(SWAGGER_WHITELIST).permitAll()
+                        // Actuator para health checks
+                        .requestMatchers("/actuator/**").permitAll()
+                        // Cualquier otra petición requiere autenticación
+                        .anyRequest().authenticated()
         );
-        httpSecurity.sessionManagement(sessionManagement -> sessionManagement.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+
+        httpSecurity.sessionManagement(sessionManagement ->
+                sessionManagement.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+        );
         httpSecurity.authenticationProvider(authenticationProvider);
         httpSecurity.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
@@ -68,13 +79,42 @@ public class SecurityConfig {
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration corsConfiguration = new CorsConfiguration();
 
-        corsConfiguration.setAllowedOrigins(List.of("http:localhost:8080"));
-        corsConfiguration.setAllowedMethods(List.of("GET", "POST"));
-        corsConfiguration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
-        corsConfiguration.addExposedHeader("X-Total-Count");
+        // Permitir múltiples orígenes incluyendo localhost y Vercel
+        corsConfiguration.setAllowedOriginPatterns(Arrays.asList(
+                "http://localhost:*",
+                "https://*.vercel.app",
+                "https://tu-frontend.vercel.app", // Reemplaza con tu dominio real
+                "https://linsi-back-production.up.railway.app" // Tu backend para self-requests
+        ));
+
+        // Métodos HTTP permitidos
+        corsConfiguration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+        ));
+
+        // Headers permitidos
+        corsConfiguration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"
+        ));
+
+        // Headers expuestos
+        corsConfiguration.setExposedHeaders(Arrays.asList(
+                "X-Total-Count",
+                "Authorization"
+        ));
+
+        // Permitir credenciales
+        corsConfiguration.setAllowCredentials(true);
+
+        // Configurar para todos los paths
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfiguration);
         return source;
     }
-
 }
